--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>HomePage</title>
+
+    <link rel="stylesheet" type="text/css" href="CSSFiles/homePage.css" media="screen" />
+
+</head>
+<body>
+
+    <video id="bgvid" playsinline autoplay muted loop>
+        <source src="social-programming-conceptual-footage-person-typing-computer-keyboard-street-crowd-of-people-in-background_4jm-cwqf__WL.mp4" type="video/mp4">
+    </video>
+
+    <div id = "mainMenu">
+    <a href = '#menu' id = "toggle"><span></span></a>
+
+    <div id ="menu">
+        <ul>
+            <li><a href = "index.html">Home</a></li>
+            <li><a href = "about.html">About</a></li>
+            <li><a href = "work.html">Work</a></li>
+            <li><a href = "publications.html">Publications</a></li>
+            <li><a href = "contact.html">Contact</a></li>
+        </ul>
+    </div>
+    </div>
+
+    <div id="custom-message"><b>SHARIF</b> | SARAH</div>
+
+    <script type="text/javascript" src="javascriotHomePage.js"></script>
+
+</body>
+</html>
