Fixed Box-sizing bug and added content

--- a/work.html
+++ b/work.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-    <div id ="mainMenu">
+    <div id ="mainMenu" style="box-sizing: inherit !important">
         <a href = '#menu' id = "toggle"><span></span></a>
 
         <div id ="menu">
@@ -27,7 +27,7 @@
         </div>
     </div>
 
-    <h1 style = "text-align: center; margin: 0; padding: 0px; position: relative; margin-top: -100px; margin-bottom: 20px; font-size: 50px; color: #f6f6f6;  z-index: 100;"><b>Projects</b></h1>
+    <h1 style = "z-index: -100 !important; text-align: center; margin: 0; padding: 0px; position: relative; margin-top: -100px; margin-bottom: 20px; font-size: 50px; color: #f6f6f6;  z-index: 100;"><b>Projects</b></h1>
 
     <div class="container">
         <header class="page-header">
@@ -39,28 +39,37 @@
 
             <li>
                 <div class="tl-circ"></div>
-                <div class="timeline-panel">
+                <div class="timeline-panel" style="right: 2.5%">
                     <div class="tl-heading">
-                        <h4>Surprising Headline Right Here</h4>
-                        <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 3 hours ago</small></p>
+                        <h4>Event Director | ATX Hack for a change</h4>
+                        <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>May 2015</small></p>
                     </div>
                     <div class="tl-body">
-                        <p>Lorem Ipsum and such.</p>
+                        <p>• Managing all strategic and operational activities regarding ATX Hack for Change<br>
+                            • Formulating local, national and global community awareness and engagement goals through the creation of a robust event sponsor and partner program<br>
+                            • Overseeing brand management and marketing to align with event development and growth; redesigned logo and materials for 2016 event<br>
+                            • Building and managing the website; from writing original content, design to drawing technical wireframes<br>
+                            • Implementing social media strategy and monitoring all multimedia content on all social media platforms<br>
+                            • Developing a repository of operational materials for long term, sustainable project success
+                        </p>
+                        <p><img src="IMG_0179.JPG"></p>
                     </div>
                 </div>
             </li>
 
             <li class="timeline-inverted">
                 <div class="tl-circ"></div>
-                <div class="timeline-panel">
+                <div class="timeline-panel" style="left: 3.0%">
                     <div class="tl-heading">
-                        <h4>Breaking into Spring!</h4>
+                        <h4>IT Project Manager & Communication Strategist | St. Edward’s University</h4>
                         <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 4/07/2014</small></p>
                     </div>
                     <div class="tl-body">
-                        <p>Hope the weather gets a bit nicer...</p>
-
-                        <p>Y'know, with more sunlight.</p>
+                        <p>• Oversees strategic communication planning and all written/multimedia materials<br>
+                            • Directs community outreach and OIT showcase events at SXSWedu<br>
+                            • Directs the in-house production of communication materials: print, web and video<br>
+                            • Collaboratively leads the development and execution of strategies for enhancing cross-functional communication within OIT and with external-facing entities<br>
+                        </p>
                     </div>
                 </div>
             </li>
@@ -69,26 +78,32 @@
 
             <li>
                 <div class="tl-circ"></div>
-                <div class="timeline-panel">
+                <div class="timeline-panel"style="right: 2.5%">
                     <div class="tl-heading">
-                        <h4>New Apple Device Release Date</h4>
+                        <h4>Digi Girlz Event Organizer | Microsoft</h4>
                         <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 3/22/2014</small></p>
                     </div>
                     <div class="tl-body">
-                        <p>In memory of Steve Jobs.</p>
+                        <p> • Assisting with event logistics on Digi Girlz; a Microsoft YouthSpark program, which gives middle and high school girls opportunities to learn about careers in technology and computer science<br>
+                            • Presenting civic hacking opportunities for future engagement to make an impact on local and global social issues<br>
+                        </p>
                     </div>
                 </div>
             </li>
             <li class="timeline-inverted">
-                <div class="timeline-panel">
+                <div class="timeline-panel"style="left: 3.0%">
                     <div class="tl-heading">
-                        <h4>No icon here</h4>
+                        <h4>Conservation Organizer | Sierra Club</h4>
                         <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 3/16/2014</small></p>
                     </div>
                     <div class="tl-body">
-                        <p>Here you'll find some beautiful photography for your viewing pleasure, courtesy of <a href="http://lorempixel.com/">lorempixel</a>.</p>
+                        <p>• Demonstrated OK, AR, and TX stakeholder concern on the Regional Haze (RH) rule to U.S. EPA<br>
+                            • Orchestrated volunteer fly-in to EPA HQ in Washington, D.C. to highlight RH work<br>
+                            • Project Manager for both Austin and Oklahoma City RH EPA Public Hearings<br>
+                            • Project Manager and Trainer for the Sierra Club Apprenticeship Program 2014-15<br>
+                            • Creator of @BeyondCoalTexas and updated the Beyond Coal Texas website</p>
 
-                        <p><img src="http://lorempixel.com/600/300/nightlife/" alt="lorem pixel"></p>
+                        <p><img src="AB_150113_B7_048dd9%20(1).jpg"></p>
                     </div>
                 </div>
             </li>
