--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <div id ="mainMenu">
+    <div id ="mainMenu" style="box-sizing: border-box">
         <a href = '#menu' id = "toggle"><span></span></a>
 
         <div id ="menu">
@@ -25,9 +25,9 @@
         </div>
     </div>
 
-    <h1 style = "text-align: center; margin: 0; padding: 0px; position: relative; margin-top: -100px; margin-bottom: 20px; font-size: 50px; color: #f6f6f6;  z-index: 100;"><b>Contact Me</b></h1>
+    <h1 style = "z-index: -100 !important; text-align: center; margin: 0; padding: 0px; position: relative; margin-top: -100px; margin-bottom: 20px; font-size: 50px; color: #f6f6f6;  z-index: 100;"><b>Contact Me</b></h1>
 
-    <section id="contact" style = "padding-top: 3%; box-sizing: border-box; background-color: #666666; padding-bottom: 3%" >
+    <section id="contact" style = "padding-top: 3%; background-color: #666666; padding-bottom: 3%;" >
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -69,10 +69,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <ul class="list-inline social-buttons" style="padding-left: 4%">
+                    <ul class="list-inline social-buttons">
                         <li style="padding-right: 3%;"><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a>
                         </li>
                         <li style="padding-left: 3%"><a href="#"><i class="fa fa-linkedin"></i></a>
                         </li>
