--- a/publications.html
+++ b/publications.html
@@ -14,7 +14,7 @@
 
 <body>
 
-        <div id ="mainMenu">
+        <div id ="mainMenu" style = "box-sizing: inherit !important">
             <a href = '#menu' id = "toggle"><span></span></a>
 
             <div id ="menu">
@@ -28,13 +28,13 @@
             </div>
         </div>
 
-        <h1 style = "text-align: center; margin: 0; padding: 0px; position: relative; margin-top: -100px; margin-bottom: 20px; font-size: 50px; color: #f6f6f6"><b>Publications</b></h1>
+        <h1 style = "z-index: -100 !important; text-align: center; margin: 0; padding: 0px; position: relative; margin-top: -100px; margin-bottom: 20px; font-size: 50px; color: #f6f6f6"><b>Publications</b></h1>
 
-        <div id = "publicationBox" style = "background-color: #f6f6f6">
-        <section id="portfolio" class="bg-light-gray" style="padding-left: 15%; box-sizing: border-box;">
-            <div class="container">
+        <div id = "publicationBox" style = "padding-left: 15%; background-color: #f6f6f6">
+        <section id="portfolio" class="bg-light-gray" style="box-sizing: initial !important;">
+            <div class="container" style = "box-sizing: initial !important">
 
-                <div class="row">
+                <div class="row" style="box-sizing: initial !important;">
                     <div class="col-md-3 col-sm-6 portfolio-item">
                         <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                             <div class="portfolio-hover">
@@ -42,11 +42,11 @@
                                     <i class="fa fa-plus fa-3x"></i>
                                 </div>
                             </div>
-                            <img src="https://unsplash.imgix.net/uploads%2F1411419068566071cef10%2F7562527b?q=75&w=1080&h=1080&fit=max&fm=jpg&auto=format&s=240c45655f09c546232a6f106688e502" class="img-responsive" alt="">
+                            <img src="https://s3.amazonaws.com/cms.cox/aas-paper.jpg" class="img-responsive" alt="" style="height: 200px; width: 300px">
                         </a>
                         <div class="portfolio-caption">
-                            <h4>Round Icons</h4>
-                            <p class="text-muted">Graphic Design</p>
+                            <h4>Austin Statesman Op-Ed;</h4>
+                            <p class="text-muted">Guest Article</p>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6 portfolio-item">
@@ -56,11 +56,11 @@
                                     <i class="fa fa-plus fa-3x"></i>
                                 </div>
                             </div>
-                            <img src="https://unsplash.imgix.net/44/9s1lvXLlSbCX5l3ZaYWP_hdr-1.jpg?q=75&w=1080&h=1080&fit=max&fm=jpg&auto=format&s=f0a1db79752dbb04ec6d2aab7d17c7b0" class="img-responsive" alt="">
+                            <img src="http://www.sierraclub.org/sites/www.sierraclub.org/files/sce-uploads/sharing/Contact%20Us.png" class="img-responsive" alt="" style="height: 200px; width: 300px">
                         </a>
                         <div class="portfolio-caption">
-                            <h4>Startup Framework</h4>
-                            <p class="text-muted">Website Design</p>
+                            <h4>Sierra Club Blog</h4>
+                            <p class="text-muted">Primary Blogger</p>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6 portfolio-item">
@@ -70,11 +70,11 @@
                                     <i class="fa fa-plus fa-3x"></i>
                                 </div>
                             </div>
-                            <img src="https://unsplash.imgix.net/46/Ov6ZY1zLTWmhPC0wFysP_IMG_2896_edt.jpg?q=75&w=1080&h=1080&fit=max&fm=jpg&auto=format&s=6518e4df89659818f6c0392175a9c5e6" class="img-responsive" alt="">
+                            <img src="http://watermanagement.ucdavis.edu/files/1213/9268/2704/UC_Davis_Transparent.jpg" class="img-responsive" alt="" style="height: 200px; width: 300px">
                         </a>
                         <div class="portfolio-caption">
-                            <h4>Treehouse</h4>
-                            <p class="text-muted">Website Design</p>
+                            <h4>Student to Student</h4>
+                            <p class="text-muted">UC Davis Guest Article</p>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6 portfolio-item">
@@ -84,39 +84,11 @@
                                     <i class="fa fa-plus fa-3x"></i>
                                 </div>
                             </div>
-                            <img src="https://unsplash.imgix.net/44/9s1lvXLlSbCX5l3ZaYWP_hdr-1.jpg?q=75&w=1080&h=1080&fit=max&fm=jpg&auto=format&s=f0a1db79752dbb04ec6d2aab7d17c7b0" class="img-responsive" alt="">
+                            <img src="http://rediscoveraustin.com/images/the-austin-chronicle.jpg" class="img-responsive" alt="" style="height: 200px; width: 300px">
                         </a>
                         <div class="portfolio-caption">
-                            <h4>Golden</h4>
-                            <p class="text-muted">Website Design</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-6 portfolio-item">
-                        <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
-                            <div class="portfolio-hover">
-                                <div class="portfolio-hover-content">
-                                    <i class="fa fa-plus fa-3x"></i>
-                                </div>
-                            </div>
-                            <img src="https://unsplash.imgix.net/46/Ov6ZY1zLTWmhPC0wFysP_IMG_2896_edt.jpg?q=75&w=1080&h=1080&fit=max&fm=jpg&auto=format&s=6518e4df89659818f6c0392175a9c5e6" class="img-responsive" alt="">
-                        </a>
-                        <div class="portfolio-caption">
-                            <h4>Escape</h4>
-                            <p class="text-muted">Website Design</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-6 portfolio-item">
-                        <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
-                            <div class="portfolio-hover">
-                                <div class="portfolio-hover-content">
-                                    <i class="fa fa-plus fa-3x"></i>
-                                </div>
-                            </div>
-                            <img src="https://unsplash.imgix.net/uploads%2F1411419068566071cef10%2F7562527b?q=75&w=1080&h=1080&fit=max&fm=jpg&auto=format&s=240c45655f09c546232a6f106688e502" class="img-responsive" alt="">
-                        </a>
-                        <div class="portfolio-caption">
-                            <h4>Dreams</h4>
-                            <p class="text-muted">Website Design</p>
+                            <h4>Austin Chronicle</h4>
+                            <p class="text-muted">Guest Article</p>
                         </div>
                     </div>
                 </div>
