Re did the about page and the project page, still need to fix the scrolling

--- a/about.html
+++ b/about.html
@@ -7,44 +7,44 @@
 </head>
 <body>
 
+    <nav id ="topbar">
     <div id ="mainMenu" style="box-sizing: inherit !important">
         <a href = '#menu' id = "toggle"><span></span></a>
 
-        <div id ="menu">
-            <ul>
-                <li><a href = "index.html">Home</a></li>
-                <li><a href = "about.html">About</a></li>
-                <li><a href = "work.html">Work</a></li>
-                <li><a href = "publications.html">Publications</a></li>
-                <li><a href = "contact.html">Contact</a></li>
-            </ul>
-        </div>
-
-
-
-
-    <h1 style = "z-index: -10; text-align: center; margin: 0; padding: 0px; position: relative; margin-top: -100px; margin-bottom: 20px; font-size: 50px; color: #f6f6f6"><b>About</b></h1>
-    <div id = aboutBox" style = "background-color: #ffffff; height: 900px">
-            <div>
-                <img style="vertical-align: middle; display: inline; height: 700px; width: 500px; padding-left: 1%; padding-top: 3%" src="SarahPublicSpeak.jpg">
-                <span style = "display: inline; float: right; padding-top: 3%; padding-right: 12%;">I currently live in Austin, Texas, but consider my a global child.
-                    Born in Pakistan and raised in both the U.K. and California, my life goal has always <br>been to simply change the world
-                    for all people.Whether I was walking around my childhood neighborhood collecting large phonebooks for
-                    recycling <br> to starting my own rainforest club when
-                    I was 11 to save a crocodile I’d fallen in love with;
-                    I’ve strived to leave this world better than I found it. <br>
-
-                    <br>
-
-With a background in biology, I’ve dabbled in engineering research to environmental nonprofit
-                    work to now human-centered business design.
-                    <br>
-                    <br>
-                    There needs to be a tremendous surge of creativity on a global scale for meaningful change and it all starts with playfulness.
-                    <br><b>And I’m here to play.</b></span>
+            <div id ="menu">
+                <ul>
+                    <li><a href = "index.html">Home</a></li>
+                    <li><a href = "about.html">About</a></li>
+                    <li><a href = "work.html">Work</a></li>
+                    <li><a href = "publications.html">Publications</a></li>
+                    <li><a href = "contact.html">Contact</a></li>
+                    <li><a href = "#">Civic Ventures LLC</a></li>
+                </ul>
             </div>
 
+
+        </div>
+    </nav>
+
+    <div class="intro">
+        <div class="content">
+            <div class="left">
+                <img src="dasisFace.jpg" alt="me" />
+            </div>
+            <div class="text">
+                <h2>Who is Sarah Sharif ?</h2>
+                <p>
+                    Earth native, Pakistani-born, British, Californian with a Master’s in Communication from <a href="https://www.stedwards.edu/">St. Edward’s University</a> and Bachelors in Biological Sciences from <a href="https://www.ucdavis.edu/">University of California, Davis.</a>
+
+                    I’ve dabbled in biomedical engineering research <a href="http://bme.ucdavis.edu/louie/">(Louie Lab)</a>, environmental nonprofit work at <a href="http://www.sierraclub.org/">Sierra Club</a> and now focusing on projects focused on human-centered business design. From directing a Cancer Health Fair after learning about the biology behind cancer to running townhalls on the importance of air quality across
+
+                    My goal has always been to simply change the world for the best.
+
+                    I’ve directed <a href="http://atxhackforchange.org/">ATX Hack for Change</a>, an annual civic hackathon, here in Austin that launched in 2013. Under my direction, I was energized to take the event to the next level. I feel strongly that there needs to be a tremendous surge of creativity on a global scale for meaningful change and it all starts with playfulness. And I’m here to play.</p>
+            </div>
+        </div>
     </div>
+
 
     <script type="text/javascript" src="javascriotHomePage.js"></script>
 
