--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
             <li><a href = "work.html">Work</a></li>
             <li><a href = "publications.html">Publications</a></li>
             <li><a href = "contact.html">Contact</a></li>
+            <li><a href = "#">Civic Ventures LLC</a></li>
         </ul>
     </div>
     </div>
-
-    <div id="custom-message"><b>SHARIF</b> | SARAH</div>
 
     <script type="text/javascript" src="javascriotHomePage.js"></script>
 
