--- a/publications.html
+++ b/publications.html
@@ -24,6 +24,7 @@
                     <li><a href = "work.html">Work</a></li>
                     <li><a href = "publications.html">Publications</a></li>
                     <li><a href = "contact.html">Contact</a></li>
+                    <li><a href = "#">Civic Ventures LLC</a></li>
                 </ul>
             </div>
         </div>
@@ -42,7 +43,7 @@
                                     <i class="fa fa-plus fa-3x"></i>
                                 </div>
                             </div>
-                            <img src="https://s3.amazonaws.com/cms.cox/aas-paper.jpg" class="img-responsive" alt="" style="height: 200px; width: 300px">
+                            <img src="AustinAmericanStatesman.png" class="img-responsive" alt="" style="height: 200px; width: 300px">
                         </a>
                         <div class="portfolio-caption">
                             <h4>Austin Statesman Op-Ed;</h4>
@@ -56,7 +57,7 @@
                                     <i class="fa fa-plus fa-3x"></i>
                                 </div>
                             </div>
-                            <img src="http://www.sierraclub.org/sites/www.sierraclub.org/files/sce-uploads/sharing/Contact%20Us.png" class="img-responsive" alt="" style="height: 200px; width: 300px">
+                            <img src="01_horizontalogo-1.png" class="img-responsive" alt="" style="height: 200px; width: 300px">
                         </a>
                         <div class="portfolio-caption">
                             <h4>Sierra Club Blog</h4>
@@ -70,7 +71,7 @@
                                     <i class="fa fa-plus fa-3x"></i>
                                 </div>
                             </div>
-                            <img src="http://watermanagement.ucdavis.edu/files/1213/9268/2704/UC_Davis_Transparent.jpg" class="img-responsive" alt="" style="height: 200px; width: 300px">
+                            <img src="ucdavis-logo.png" class="img-responsive" alt="" style="height: 200px; width: 300px">
                         </a>
                         <div class="portfolio-caption">
                             <h4>Student to Student</h4>
@@ -84,7 +85,7 @@
                                     <i class="fa fa-plus fa-3x"></i>
                                 </div>
                             </div>
-                            <img src="http://rediscoveraustin.com/images/the-austin-chronicle.jpg" class="img-responsive" alt="" style="height: 200px; width: 300px">
+                            <img src="austinchroniclelogo.png" class="img-responsive" alt="" style="height: 200px; width: 300px">
                         </a>
                         <div class="portfolio-caption">
                             <h4>Austin Chronicle</h4>
