--- a/work.html
+++ b/work.html
@@ -13,88 +13,105 @@
 </head>
 <body>
 
-    <div id ="mainMenu" style="box-sizing: inherit !important">
-        <a href = '#menu' id = "toggle"><span></span></a>
+    <nav id = "topbar">
+        <div id ="mainMenu" style="box-sizing: inherit !important">
+            <a href = '#menu' id = "toggle"><span></span></a>
 
-        <div id ="menu">
-            <ul>
-                <li><a href = "index.html">Home</a></li>
-                <li><a href = "about.html">About</a></li>
-                <li><a href = "work.html">Work</a></li>
-                <li><a href = "publications.html">Publications</a></li>
-                <li><a href = "contact.html">Contact</a></li>
-            </ul>
+            <div id ="menu">
+                <ul>
+                    <li><a href = "index.html">Home</a></li>
+                    <li><a href = "about.html">About</a></li>
+                    <li><a href = "work.html">Work</a></li>
+                    <li><a href = "publications.html">Publications</a></li>
+                    <li><a href = "contact.html">Contact</a></li>
+                    <li><a href = "#">Civic Ventures LLC</a></li>
+                </ul>
+            </div>
         </div>
-    </div>
-
-    <h1 style = "z-index: -100 !important; text-align: center; margin: 0; padding: 0px; position: relative; margin-top: -100px; margin-bottom: 20px; font-size: 50px; color: #f6f6f6;  z-index: 100;"><b>Projects</b></h1>
+    </nav>
 
     <div class="container">
         <header class="page-header">
-            <h1>Work</h1>
+            <h1>Projects</h1>
         </header>
 
+        <section id="section01" class="demo">
+            <a href="#section02"><span></span><span></span><span></span></a>
+        </section>
+
         <ul class="timeline">
-            <li><div class="tldate">Apr 2014</div></li>
+            <li><div class="tldate">2017</div></li>
 
             <li>
                 <div class="tl-circ"></div>
                 <div class="timeline-panel" style="right: 2.5%">
                     <div class="tl-heading">
                         <h4>Event Director | ATX Hack for a change</h4>
-                        <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>May 2015</small></p>
                     </div>
                     <div class="tl-body">
+                        <br>
                         <p>• Managing all strategic and operational activities regarding ATX Hack for Change<br>
                             • Formulating local, national and global community awareness and engagement goals through the creation of a robust event sponsor and partner program<br>
                             • Overseeing brand management and marketing to align with event development and growth; redesigned logo and materials for 2016 event<br>
                             • Building and managing the website; from writing original content, design to drawing technical wireframes<br>
                             • Implementing social media strategy and monitoring all multimedia content on all social media platforms<br>
-                            • Developing a repository of operational materials for long term, sustainable project success
+                            • Developing a repository of operational materials for long term, sustainable project success<br>
+                            <br>
+                            <a href="https://www.youtube.com/watch?v=79Mhc1VN6gU&t=2s" style="margin-right: 83%; color: #26A65B; font-size: 15px;">Youtube Link</a>
+                            <br>
+
                         </p>
                         <p><img src="IMG_0179.JPG"></p>
                     </div>
                 </div>
             </li>
 
+            <section id="section02" class="demo">
+                <a href="#section03"><span></span></a>
+            </section>
+
             <li class="timeline-inverted">
                 <div class="tl-circ"></div>
                 <div class="timeline-panel" style="left: 3.0%">
                     <div class="tl-heading">
+                        <h4>DigiGirlz Event Organizer | Microsoft </h4>
+                    </div>
+                    <div class="tl-body">
+                        <p> • Assisting with event logistics on Digi Girlz; a Microsoft YouthSpark program, which gives middle and high school girls opportunities to learn about careers in technology and computer science.<br>
+                            • Presenting civic hacking opportunities for future engagement to make an impact on local and global social issues<br>
+                            <br>
+                            <a href="https://www.youtube.com/watch?v=P6abuNBFTeo&feature=youtu.be" style="margin-right: 83%; color: #26A65B; font-size: 15px;">Youtube Link</a>
+                            <br>
+                        </p>
+                    </div>
+                </div>
+            </li>
+
+            <li><div class="tldate">2016</div></li>
+
+            <li class="timeline">
+                <div class="tl-circ" style="top: 16%"></div>
+                <div class="timeline-panel"style="right: 2.5%">
+                    <div class="tl-heading">
                         <h4>IT Project Manager & Communication Strategist | St. Edward’s University</h4>
-                        <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 4/07/2014</small></p>
                     </div>
                     <div class="tl-body">
                         <p>• Oversees strategic communication planning and all written/multimedia materials<br>
                             • Directs community outreach and OIT showcase events at SXSWedu<br>
                             • Directs the in-house production of communication materials: print, web and video<br>
-                            • Collaboratively leads the development and execution of strategies for enhancing cross-functional communication within OIT and with external-facing entities<br>
-                        </p>
+                            • Collaboratively leads the development and execution of strategies for enhancing cross-functional communication within OIT and with external-facing entities<br></p>
+                        <a href="https://www.youtube.com/channel/UCxIsXDIUUm3rgvPnTfM0ymA" style="margin-right: 83%; color: #26A65B; font-size: 15px;">Youtube Link</a>
                     </div>
                 </div>
             </li>
 
-            <li><div class="tldate">Mar 2014</div></li>
+            <li><div class="tldate">2015</div></li>
 
-            <li>
-                <div class="tl-circ"></div>
-                <div class="timeline-panel"style="right: 2.5%">
-                    <div class="tl-heading">
-                        <h4>Digi Girlz Event Organizer | Microsoft</h4>
-                        <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 3/22/2014</small></p>
-                    </div>
-                    <div class="tl-body">
-                        <p> • Assisting with event logistics on Digi Girlz; a Microsoft YouthSpark program, which gives middle and high school girls opportunities to learn about careers in technology and computer science<br>
-                            • Presenting civic hacking opportunities for future engagement to make an impact on local and global social issues<br>
-                        </p>
-                    </div>
-                </div>
-            </li>
             <li class="timeline-inverted">
+                <div class="tl-circ"></div>
                 <div class="timeline-panel"style="left: 3.0%">
                     <div class="tl-heading">
-                        <h4>Conservation Organizer | Sierra Club</h4>
-                        <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 3/16/2014</small></p>
+                        <h4>Conversation Organizer | Sierra Club</h4>
                     </div>
                     <div class="tl-body">
                         <p>• Demonstrated OK, AR, and TX stakeholder concern on the Regional Haze (RH) rule to U.S. EPA<br>
@@ -102,61 +119,82 @@
                             • Project Manager for both Austin and Oklahoma City RH EPA Public Hearings<br>
                             • Project Manager and Trainer for the Sierra Club Apprenticeship Program 2014-15<br>
                             • Creator of @BeyondCoalTexas and updated the Beyond Coal Texas website</p>
-
-                        <p><img src="AB_150113_B7_048dd9%20(1).jpg"></p>
-                    </div>
-                </div>
-            </li>
-            <li>
-                <div class="tl-circ"></div>
-                <div class="timeline-panel">
-                    <div class="tl-heading">
-                        <h4>Some Important Date!</h4>
-                        <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 3/03/2014</small></p>
-                    </div>
-                    <div class="tl-body">
-                        <p>Write up a quick summary of the event.</p>
-                    </div>
-                </div>
-            </li>
-            <li>
-                <div class="timeline-panel noarrow">
-                    <div class="tl-heading">
-                        <h4>Secondary Timeline Box</h4>
-                        <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 3/01/2014</small></p>
-                    </div>
-                    <div class="tl-body">
-                        <p>This might be a follow-up post with related info. Maybe we include some extra links, tweets, user comments, photos, etc.</p>
+                        <p><img src="sierraClubIMG.jpg"></p>
                     </div>
                 </div>
             </li>
 
-            <li><div class="tldate">Feb 2014</div></li>
+            <li><div class="tldate"> 2014</div></li>
+
+            <li class="timeline">
+                <div class="tl-circ" style="top: 8%"></div>
+                <div class="timeline-panel" style ="right: 2.5%;">
+                    <div class="tl-heading">
+                        <h4>Organizing Apprentice | Sierra Club </h4>
+                    </div>
+                    <div class="tl-body">
+                        <p>• Demonstrated OK, AR, and TX stakeholder concern on the RH rule to EPA<br>
+                            • Conducted informational sessions with federal and gov. agencies in OK, AR, and TX<br>
+                            • Drafted RH press releases, blogs, email content, and fact sheets.<br>
+                            • Social Media Coordinator for Dallas EPA Hearing and New Orleans Coal Exports Meeting<br>
+                            <a href="http://bit.ly/1wMs3nX" style="margin-right: 70%; color: #26A65B; font-size: 15px;">Texas Green Blog</a>
+                        </p>
+                        <p><img src="sierraGreenPhoto.jpg"></p>
+                    </div>
+                </div>
+            </li>
+
+            <li><div class="tldate"> 2013</div></li>
 
             <li class="timeline-inverted">
-                <div class="tl-circ"></div>
-                <div class="timeline-panel">
+                <div class="tl-circ" style="top: 20%"></div>
+                <div class="timeline-panel" style ="left: 3.0%;">
                     <div class="tl-heading">
-                        <h4>The Winter Months</h4>
-                        <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 02/23/2014</small></p>
+                        <h4>Marketing & Social Media Intern | Austin Chronicle </h4>
                     </div>
                     <div class="tl-body">
-                        <p>Gee time really flies when you're having fun.</p>
+                        <p>• Selected to write promotional blog content to assist in client advertising
+                            <br>
+                            <a href="http://bit.ly/1aQBVUA" style="margin-right: 70%; color: #26A65B; font-size: 15px;">Event Promotions Blog</a>
+                        </p>
                     </div>
                 </div>
             </li>
-            <li>
-                <div class="tl-circ"></div>
-                <div class="timeline-panel">
+
+            <li><div class="tldate"> 2012</div></li>
+
+            <li class="timeline">
+                <div class="tl-circ" style="top: 25%"></div>
+                <div class="timeline-panel" style ="right: 2.5%;">
                     <div class="tl-heading">
-                        <h4>Yeah we're pretty much done here</h4>
-                        <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 02/11/2014</small></p>
+                        <h4>Peer Adviser, College of Biological Sciences (CBS) Dean’s Office | UC Davis</h4>
                     </div>
                     <div class="tl-body">
-                        <p>New stuff</p>
+                        <p>• Co-creator of CBS student blog that streamlined academic processes
+                            <br>
+                            <a href="www.cbspeerblog.wordpress.com" style="margin-right: 70%; color: #26A65B; font-size: 15px;">CBS Student Blog</a>
+                        </p>
                     </div>
                 </div>
             </li>
+
+            <li><div class="tldate"> 2011</div></li>
+
+            <li class="timeline-inverted">
+                <div class="tl-circ" style="top: 4%"></div>
+                <div class="timeline-panel" style ="left: 3.0%;">
+                    <div class="tl-heading">
+                        <h4>Biomedical Research | UC Davis</h4>
+                    </div>
+                    <div class="tl-body">
+                        <p>• Chosen to assist with experiments to transfect cells with light producing enzymes to use as a model system for testing contrast agents with quarterly presentations to research team
+                            <br>
+                        </p>
+                        <p><img src="biomedIMG.jpg"></p>
+                    </div>
+                </div>
+            </li>
+
         </ul>
     </div>
 
